--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
   <link rel="stylesheet" href="style/main.css">
 
-  <title>Placar Volei</title>
+  <title>Placar Vôlei</title>
 </head>
 <body>
   <header>
-    <h1>Placar Volei</h1>
+    <h1>Placar Vôlei</h1>
   </header>
 
   <div class="placar">
